                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-08-2006 added: Drempels screen saver
 - 07-08-2006 fixed: Visualisations were often sent incorrect samplerate and/or bitspersample info (unless the source audio was 16bit 48kHz)
 - 07-08-2006 fixed: bob deinterlacing wasn't working for dvdplayer, it overwrote texture before displaying second field
 - 07-08-2006 fixed: possible fix for UPnP leak
 - 07-08-2006 fixed: UPnP limit to 256 entries per container.
 - 06-08-2006 fixed: Skin bool settings with value didn't work (and caused eratic behaviour)
 - 06-08-2006 fixed: broken trainers could crash xbmc in some cases.
 - 06-08-2006 added: zipped trainers.|
 - 06-08-2006 fixed: Listcontrol crash when going from a long listing to a short listing.
 - 06-08-2006 changed: Folders should display with their labels by default, rather than the filenames.
 - 05-08-2006 fixed: DVDPlayer didn't use the time seek values from AdvancedSettings.xml
 - 04-08-2006 fixed: some files slipped through when browsing for dirs in filebrowser (for instance shoutcast streams).
 - 04-08-2006 fixed: [ 1518486 ] xbmc.PlayList(0)[i].getduration() is broken.
 - 04-08-2006 changed: last loaded profile is now automatically selected in the login screen.
 - 04-08-2006 fixed: reenabled filedirectories in the browse for subtitles dialog. means archives works again.
 - 04-08-2006 added: [ 1533282 ] IMDb Python Library. thanks to no1cantel and allthekill. now go create a bunch of fancy imdb enabled scripts! :)
 - 03-08-2006 changed: guibuilder.py, added <resolution> option tag to skin.xml file, fastMethod option, maybe others.